--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Horiseon is a marketing agency that specializes in search engine optimization, online reputation management and social media marketing.">
     <!--Linking CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--Title shown on tab-->
     <title>Horiseon Digital Marketing</title>
 </head>
 
@@ -47,7 +48,7 @@
 
         <section id="search-engine-optimization" class="section">
             <!--Link to photo-->
-            <img src="./assets/css/images/search-engine-optimization.jpg" alt="SEO Notebook" class="float-left" />
+            <img src="./assets/css/images/search-engine-optimization.jpg" alt="SEO Drawings" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -58,7 +59,7 @@
 
         <section id="online-reputation-management" class="section">
             <!--Link to photo-->
-            <img src="./assets/css/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" />
+            <img src="./assets/css/images/online-reputation-management.jpg" alt="Macbook reputation graph" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -102,7 +103,7 @@
         <section class="sidebar">
             <h3>Cost Management</h3>
             <!--Link to image-->
-            <img src="./assets/css/images/cost-management.png"></img>
+            <img src="./assets/css/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
